--- a/src/Styles/Footer.module.css
+++ b/src/Styles/Footer.module.css
@@ -2,6 +2,7 @@
   width: 100%;
   /* border: 1px solid; */
   display: flex;
+  flex-direction: column;
   justify-content: center;
 }
 
@@ -10,6 +11,7 @@
   height: auto;
   /* border: 1px solid; */
   display: flex;
+  
   flex-direction: column;
   align-items: center;
 }
