--- a/src/Styles/Footer.module.css
+++ b/src/Styles/Footer.module.css
@@ -3,7 +3,7 @@
   /* border: 1px solid; */
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  align-items: center;
 }
 
 .content {
@@ -11,7 +11,7 @@
   height: auto;
   /* border: 1px solid; */
   display: flex;
-  
+
   flex-direction: column;
   align-items: center;
 }
@@ -25,7 +25,7 @@
 }
 
 .content ul {
-  width: 60%;
+  width: 70%;
   display: flex;
   flex-direction: column;
   gap: 10px;
@@ -39,4 +39,88 @@
   font-weight: 400;
   color: #333;
   list-style: circle;
+}
+
+.external {
+  width: 60%;
+  display: flex;
+  flex-direction: column;
+  margin-top: 20px;
+  /* border: 1px solid red; */
+  /* align-items: center; */
+}
+
+
+.container h1 {
+  margin: 20px;
+  font-style: normal;
+  font-weight: 700;
+}
+
+.container h3 {
+  margin: 20px;
+  width: 60%;
+  text-align: center;
+  font-style: normal;
+  font-weight: 400;
+  word-wrap: normal;
+  line-height: 40px;
+}
+
+.external ul {
+  display: flex;
+  justify-content: space-around;
+  padding: 20px;
+  list-style: none;
+}
+.external ul li {
+  display: flex;
+  width: 120px;
+  padding: 5px;
+  justify-content: space-between;
+  background-color: rgba(147, 214, 107, 0.2);
+  border: 1px solid rgb(236, 235, 235);
+  border-radius: 4px;
+}
+
+.external ul li a {
+  text-decoration: none;
+  color: #333;
+  font-size: 14px;
+  font-weight: 400;
+}
+
+/* external ul>li>a::before {
+  content: '';
+  background-image: url('../img/twitter.svg');
+} */
+.twitter {
+  content: '';
+  width: 20px;
+  height: 20px;
+  background-image: url('../img/twitter.svg');
+  background-repeat: no-repeat;
+  background-size: contain;
+  padding-left: 30px;
+}
+.facebook {
+  content: '';
+  background-image: url('../img/facebook.svg');
+  background-repeat: no-repeat;
+  background-size: contain;
+  padding-left: 30px;
+}
+.instagram {
+  content: '';
+  background-image: url('../img/instagram.svg');
+  background-repeat: no-repeat;
+  background-size: contain;
+  padding-left: 30px;
+}
+.youtube {
+  content: '';
+  background-image: url('../img/youtube.svg');
+  background-repeat: no-repeat;
+  background-size: contain;
+  padding-left: 30px;
 }
