--- a/src/Styles/Header.module.css
+++ b/src/Styles/Header.module.css
@@ -7,9 +7,8 @@
 
 .navbar {
   width: 60%;
-  border-bottom: 1px solid #d6d6d6;
+  /* border-bottom: 1px solid #d6d6d6; */
   display: flex;
-  /* justify-content: space-between; */
 }
 
 .logo {
@@ -17,34 +16,29 @@
   background-image: url('../img/log.png');
   background-repeat: no-repeat;
   background-size: contain;
-  
-  /* border: 1px solid; */
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  font-size: larger;
-  padding: 10px;
+  background-position: center;
+  border: 1px solid #d6d6d6;
 }
 
 .links {
+  display: flex;
   padding: 10px;
-  width: 70%;
+  flex-basis: 70%;
   color: #333;
-  /* justify-content: flex-start; */
-  /* border: 1px solid; */
 }
 .links ul {
   display: flex;
+  width: 100%;
   justify-content: center;
-  justify-items: center;
   list-style: none;
-  gap: 60px;
-  padding: 20px;
+  flex-wrap: wrap;
+  gap: 40px;
+  padding: 10px;
   font-size: 20px;
   /* border: 1px solid; */
 }
 .links ul a {
-  font-family: Open Sans,Arial,sans-serif;
+  font-family: Open Sans, Arial, sans-serif;
   text-decoration: none;
   color: #333;
   /* border: 1px solid; */
