--- a/src/Styles/Main.module.css
+++ b/src/Styles/Main.module.css
@@ -1,31 +1,32 @@
 .main {
   width: 100%;
-  height: 270px;
+  /* height: 270px; */
   background: linear-gradient(135deg, #376f9d, #66cdcc) #376f9d;
   display: flex;
   justify-content: center;
 }
 
 .container {
-  width: 60%;
+  max-width: 60%;
   display: flex;
+  flex-wrap: wrap;
+
 }
 
 .inputdiv {
-  width: 50%;
+  max-width: 50%;
   display: flex;
   flex-direction: column;
-
   padding: 10px;
   gap: 10px;
 }
 
 .inputdiv h2 {
-  width: 70%;
+  max-width: 70%;
   font-weight: 650;
   color: white;
   margin: 20px 20px 20px 0;
-  font-family: Arial,Helvetica,sans-serif;
+  font-family: Arial, Helvetica, sans-serif;
 }
 
 .inputdiv input {
@@ -56,8 +57,7 @@
   font-weight: 600;
   color: white;
   margin: 20px 20px 20px 0;
-  font-family: Arial,Helvetica,sans-serif;
-
+  font-family: Arial, Helvetica, sans-serif;
 }
 .content button {
   width: 60%;
@@ -74,7 +74,7 @@
 }
 
 .content button:hover {
-  box-shadow: none;  
+  box-shadow: none;
   background-color: #72a701;
   cursor: pointer;
   margin-top: 5px;
@@ -82,6 +82,4 @@
 .content button i {
   margin-top: 5px;
   margin-left: 10px;
-  
-  
 }
