--- a/src/Styles/Header.module.css
+++ b/src/Styles/Header.module.css
@@ -1,35 +1,47 @@
 .header {
+  margin-top: 40px;
   width: 100%;
   display: flex;
   justify-content: center;
   background-color: #f9f9f9;
+  /* flex-shrink: 0; */
 }
 
 .navbar {
-  width: 60%;
-  /* border-bottom: 1px solid #d6d6d6; */
   display: flex;
+  width: 60%;
+  flex-wrap: wrap;
+  flex-shrink: 0;
+  /* border-bottom: 1px solid #d6d6d6; */
 }
 
 .logo {
-  width: 30%;
-  background-image: url('../img/log.png');
-  background-repeat: no-repeat;
-  background-size: contain;
-  background-position: center;
-  border: 1px solid #d6d6d6;
+  display: flex;
+  flex-basis: 30%;
+  align-content: center;
+  flex-shrink: 0;
+}
+
+.logo img {
+  max-width: 100%;
+  /* height: 20px; */
+  align-items: center;
+  /* height: 100%; */
 }
 
 .links {
   display: flex;
+  align-items: center;
+  flex-wrap: wrap;
   padding: 10px;
   flex-basis: 70%;
   color: #333;
 }
 .links ul {
   display: flex;
-  width: 100%;
+  /* width: 100%; */
   justify-content: center;
+  /* flex-shrink: 1; */
   list-style: none;
   flex-wrap: wrap;
   gap: 40px;
