--- a/src/Styles/Main.module.css
+++ b/src/Styles/Main.module.css
@@ -1,6 +1,6 @@
 .main {
   width: 100%;
-  /* height: 270px; */
+  height: 270px;
   background: linear-gradient(135deg, #376f9d, #66cdcc) #376f9d;
   display: flex;
   justify-content: center;
@@ -10,19 +10,21 @@
   max-width: 60%;
   display: flex;
   flex-wrap: wrap;
-
 }
 
 .inputdiv {
   max-width: 50%;
+  /* flex-basis: 50%; */
   display: flex;
   flex-direction: column;
   padding: 10px;
   gap: 10px;
+  order: 1;
+  /* flex-shrink: 1; */
 }
 
 .inputdiv h2 {
-  max-width: 70%;
+  /* width: 70%; */
   font-weight: 650;
   color: white;
   margin: 20px 20px 20px 0;
@@ -30,12 +32,13 @@
 }
 
 .inputdiv input {
-  width: 80%;
+  max-width: 90%;
   height: 60px;
   padding: 20px;
   border: none;
   border-radius: 4px;
 }
+
 .inputdiv h5 {
   width: 70%;
   font-size: small;
@@ -45,15 +48,16 @@
 }
 
 .content {
-  width: 50%;
+  /* max-width: 50%; */
+  flex-basis: 50%;
   display: flex;
   flex-direction: column;
-  /* justify-content: center; */
   gap: 10px;
   padding: 10px;
+  order: 2;
 }
 .content h2 {
-  width: 70%;
+  /* width: 70%; */
   font-weight: 600;
   color: white;
   margin: 20px 20px 20px 0;
@@ -82,4 +86,82 @@
 .content button i {
   margin-top: 5px;
   margin-left: 10px;
+}
+
+@media (max-width: 450px) {
+  .main {
+    width: 100%;
+    height: auto;
+  }
+
+  .container {
+    max-width: 100%;
+  }
+  .inputdiv {
+    max-width: 100%;
+  }
+  .inputdiv h2 {
+    width: 100%;
+  }
+  .inputdiv h5 {
+    width: 100%;
+    font-size: 10px;
+  }
+  .inputdiv input {
+    max-width: 100%;
+  }
+
+  .content {
+    flex-basis: 100%;
+  }
+
+  .content > h2 {
+    width: 100%;
+  }
+  .content > button {
+    width: 100%;
+  }
+}
+
+@media (max-width: 720px) {
+  .main {
+    width: 100%;
+    height: auto;
+  }
+
+  .container {
+    max-width: 100%;
+
+  }
+  .inputdiv {
+    max-width: 100%;
+  }
+  .inputdiv h2 {
+    width: 100%;
+  }
+  .inputdiv h5 {
+    width: 100%;
+    font-size: 10px;
+  }
+  .inputdiv input {
+    max-width: 100%;
+  }
+
+  .content {
+    flex-basis: 100%;
+  }
+
+  .content > h2 {
+    width: 100%;
+  }
+  .content > button {
+    width: 100%;
+  }
+}
+
+@media (max-width:1200px){
+
+  .content >button {
+    font-size: 25px;
+  }
 }
