--- a/src/Styles/Footer.module.css
+++ b/src/Styles/Footer.module.css
@@ -6,6 +6,12 @@
   align-items: center;
 }
 
+.container > video {
+  width: 300px;
+  height: 300px;
+  margin-top: 40px;
+}
+
 .content {
   width: 60%;
   height: auto;
@@ -26,18 +32,28 @@
 .content ul {
   width: 70%;
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   gap: 10px;
   padding: 20px;
-  align-items: flex-start;
+  /* align-items: flex-start; */
+  flex-wrap: wrap;
   /* border: 1px solid; */
+  list-style: none;
+  justify-content: center;
 }
 
 .content ul li {
-  font-size: 20px;
-  font-weight: 400;
-  color: #333;
-  list-style: circle;
+  width: 200px;
+  height: 200px;
+  display: inline;
+  /* border: 1px solid; */
+  list-style: none;
+ 
+}
+.content ul li video{
+  width: 100%;
+  height: 100%;
+ 
 }
 
 .external {
